--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 let table = '<br/><h5>The box is appropriate for these items:</h5>' +
                     '<table>';
-                table += '<tr><th>Product Code</th><th>Box Length</th><th>Box Width</th><th>Box Height</th><th>Quantity</th></tr>';
+                table += '<tr><th>Product Code</th><th>Length</th><th>Width</th><th>Height</th><th>Quantity</th></tr>';
                 for (let i = 0; i < data.length; i++) {
                     table += '<tr>';
                     table += '<td>' + data[i].barcode + '</td>';
