--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
                 let minBoxW = 0;
                 let minBoxH = 0;
 
+                minI = parseInt(minI - 1, 10);
+                minJ = parseInt(minJ - 1, 10);
+                minK = parseInt(minK - 1, 10);
+                maxI = parseInt(maxI + 1, 10);
+                maxJ = parseInt(maxJ + 1, 10);
+                maxK = parseInt(maxK + 1, 10);
+
                 let i = minI;
                 let j;
                 let k;
