--- a/individual_box_es.html
+++ b/individual_box_es.html
@@ -74,7 +74,7 @@
                                 }
 
                                 if (resBox.box) {
-                                    $('#content').html('' + resBox.l + 'X' + resBox.w + 'X' + resBox.h + '<br/>Box type: ' + resBox.box + '</b>');
+                                    $('#content').html('' + tableItem.length + 'X' + tableItem.width + 'X' + tableItem.height + '<br/>Box type: ' + resBox.box + '</b>');
                                 } else {
                                     $('#content').html('Big product, please find the box manually');
                                 }
